[package]
name = "time"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["time"]
description = "loop based time state for rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-time.git"
homepage = "https://github.com/nathanfaucett/rs-time"

[dependencies]
chrono = "0.2"
